--- a/index.html
+++ b/index.html
@@ -3,23 +3,28 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Inspire</title>
+	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
+	 crossorigin="anonymous">
 	<link rel="stylesheet" href="assets/css/style.css">
 </head>
 
 <body id="body">
-	<div id="weather">
-		Your Weather Template
-	</div>
+	<div class="container" id="background">
 
-	<div id="quote">
-		The Quote
-	</div>
 
-	<div id="todo">
-		<form onsubmit=""></form>
-		A Todo List
-	</div>
+		<div id="weather">
+			Your Weather Template
+		</div>
 
+		<div id="quote">
+			The Quote
+		</div>
+
+		<div id="todo">
+			<form onsubmit=""></form>
+			A Todo List
+		</div>
+	</div>
 
 
 
