--- a/index.html
+++ b/index.html
@@ -19,10 +19,15 @@
 		<div id="quote">
 			The Quote
 		</div>
+		<div id="todos" class="todos">
 
+
+		</div>
 		<div id="todo">
-			<form onsubmit=""></form>
-			A Todo List
+			<form onsubmit="app.controllers.todoController.addTodoFromForm(event)">
+				<input type="text" name="todo">
+				<button type="submit">Add Todo</button>
+			</form>
 		</div>
 	</div>
 
